nit is in progress

--- a/nir/research/01-definitions.tex
+++ b/nir/research/01-definitions.tex
@@ -1,3 +1,5 @@
 \begin{definitions}
-	\definition{}{}
+	\definition{Факторный анализ}{статистический метод, позволяющий определить действия, которые связаны между собой, но независимы от других~\cite{PervinJohn2001Personality}.}
+	
+	
 \end{definitions}
