--- a/nir/research/02-abbreviations.tex
+++ b/nir/research/02-abbreviations.tex
@@ -1,3 +1,6 @@
 \begin{abbreviations}
-	\definition{}{}
+	\definition{ЧМВ}{человеко-машинное взаимодействие}
+	\definition{ПОПЧ}{подходы к описанию персональных черт}
+	\definition{ДС}{диалоговая система}
+	
 \end{abbreviations}
