--- a/nir/research/06-implementation.tex
+++ b/nir/research/06-implementation.tex
@@ -28,18 +28,43 @@
 
 \section{Трехфакторная теория Г. Ю. Айзенка}
 
-В результате дважды проведенной процедуры факторного анализа Г. Ю. Aйзенк выделил 2 базовых параметра личности --- \textbf{экстраверсия} и \textbf{нейротизм}. 
-Каждый параметр имеет два полюса, характеризующих различные степени выраженности черты (экстраверсия --- интроверсия, нейротизм --- эмоциональная стабильность) \cite{theory_of_personality_eysenck}.
+Г. Ю. Айзенк выделяет следующую иерархию в структуре личности~\cite{hjellegger-zigler, PervinJohn2001Personality}.
 
-Айзенк описывает человека с высоким уровнем экстраверсии как общительного, импульсивного, активного, в то время как интроверт рассматривается как человек замкнутый, любящий уединение. Обладатели высокого уровня нейротизма склонны часто испытывать тревогу, беспокойство когда его низкий уровень говорит о спокойствии, уравновешенности, сдержанности \cite{theory_of_personality_eysenck}.
+\begin{enumerate}
+	\item Уровень конкретных реакций --- конкретные наблюдаемые ситуации, в которых человек повел себя определенным образом;
+	
+	\item Уровень привычных реакций --- повторяющиеся модели поведения, которые человек проявляет в разных, но схожих ситуациях;
+	
+	\item Уровень черт --- устойчивые особенности личности, которые проявляются в виде набора привычных реакций и определяют поведение человека в широком диапазоне ситуаций;
+	
+	\item Уровень суперфакторов (типов, суперчерт) --- наиболее общие и широкие измерения личности, объединяющие несколько черт.
+\end{enumerate}
 
-Впоследствие к этим двум параметрам личности был добавлен третий --- \textbf{психотизм}, высокий уровень которого характеризует человека как холодного, равнодушного к другим, противника общепринятных социальных норм, склонного к риску \cite{theory_of_personality_eysenck}.
+
+В результате дважды проведенной~\cite{PervinJohn2001Personality} процедуры факторного анализа собранных им данных Г. Ю. Aйзенк выделил 2 суперфактора личности --- \textbf{экстраверсия} и \textbf{нейротизм}. 
+Каждый из суперфакторов не зависит от другого, характеризующих непрерывный диапазон различных степеней выраженности черты --- от высокой к низкой (экстраверсия --- интроверсия, нейротизм --- стабильность) \cite{theory_of_personality_eysenck}.
+
+Г. Ю. Айзенк описывает человека с высоким уровнем экстраверсии как общительного, импульсивного, активного, в то время как интроверт рассматривается как человек замкнутый, любящий уединение. 
+Обладатели высокого уровня нейротизма склонны часто испытывать тревогу, беспокойство когда его низкий уровень говорит о спокойствии, уравновешенности, сдержанности \cite{theory_of_personality_eysenck}.
+
+Крайние значения суперфакторов экстраверсии и нейротизма позволяют выделить 4 типа личности, которые соотносятся с 4 типа темперамерта, описанных Гиппократом и Галленом (рисунок~\ref{img:eysenck-temperament}) \cite{theory_of_personality_eysenck, PervinJohn2001Personality}.
+
+\includeimage
+{eysenck-temperament} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+{f} % Обтекание (без обтекания)
+{h} % Положение рисунка (см. figure из пакета float)
+{0.7\textwidth} % Ширина рисунка
+{Соотношение типов темперамента с суперчертами, выделенными Г. Ю. Aйзенком} % Подпись рисунка
+
+Впоследствии к этим двум параметрам личности был добавлен третий --- \textbf{психотизм}, высокий уровень которого характеризует человека как холодного, равнодушного к другим, противника общепринятных социальных норм, склонного к риску \cite{theory_of_personality_eysenck}.
 
 Каждый из вышеперечисленных параметров имеет под собой билогический базис. Биологической основой нейротизма считается лимбическая система, отвечающая за возникновение эмоций и активацию симпатической нервной системы. Экстраверсия связана с другой мозговой структурой — восходящей ретикулярной активирующей системой (ВРАС), или ретикулярной формацией, регулирующей уровень общей мозговой активности. Психотизм, в свою очередь, обусловлен влиянием мужских гормонов и других биохимических факторов, включая уровень серотонина \cite{theory_of_personality_eysenck}.
 
 Айзенк также разработал множество вопросников для измерения личности по этим параметрам: Личностный список модели, Личностный список Айзенка, Личностный вопросник Айзенка \cite{PervinJohn2001Personality}.
 
 \section{Подход Р. Б. Кэттела}
+
+% упомянуть это суперчерты (суперфакторы)
 
 В рамках своей теории он предложил две классификации личностных черт. Согласно первой, черты делятся на \cite{PervinJohn2001Personality}:
  
@@ -60,13 +85,15 @@
 \end{itemize}
 
 Для обнаружения глубинных черт личности Кэттелом была проведена огромная работа по изучению трех основных источников данных --- данные о реальном поведении, данные, получаемые из опросников, в также данные поведенческих тестов \cite{PervinJohn2001Personality, theory_of_personality_cattell}. Для выделения черт Кеттелом многократно применялся статистический метод факторного анализа. 
-В результате было выделено 16 факторов, для измерения которых был создан 16-факторный опросник (16 Р.F.) \cite{cattell_questionnaire}.
+В результате было выделено 16 факторов~\cite{hjellegger-zigler}, для измерения которых был создан 16-факторный опросник (16 Р.F.) \cite{cattell_questionnaire}.
 
-\section{Большая пятерка}
+\section{Большая пятерка черт}
 
-\textbf{Большая пятерка} --- эмпирически выведенный (в результате процедуры факторного анализа) набор относительно независимых черт человека\cite{big_five_traits}. 
+Пятифакторная модель личности (известная также как Большая пятерка черт) возникла как обобщение всех прежде известных диспозициальных теорий личности~\cite{PervinJohn2001Personality}.
 
-Термин <<Большая пятерка>> был введен  Л. Голдбергом в своей работе 1981 года \cite{goldberg1981language} как название для выделенных 5 черт личности:
+Основой <<Большой пятерки>> является фундаментальная лексическая гипотеза --- гипотеза о том, что со временем наиболее важные индивидуальные различия в человеческих взаимодействиях были закодированы в виде отдельных слов в естественном языке~\cite{big_five_traits}. 
+
+Термин <<Большая пятерка>> был введен  Л. Голдбергом в своей работе 1981 года \cite{goldberg1981language} как название для выделенных 5 факторов личности:
 
 \begin{itemize}
 	\item \textbf{экстраверсия} --- показывает, насколько человек любит общение, полон энергии и положительных эмоций. Экстраверты активны, общительны, любят внимание и выражение своей позиции; слишком высокий уровень может проявляться навязчивостью. Низкие показатели отражают интроверсию -- спокойствие, самостоятельность, низкую потребность во внешней стимуляции; крайние значения могут указывать на трудности в социальных контактах \cite{big_five_traits};
@@ -80,7 +107,7 @@
 	\item \textbf{открытость опыту} --- отражает интерес человека к новому — идеям, людям, местам. Высокие показатели связаны с творчеством, развитым воображением и тягой к новизне, низкие --- с консерватизмом, исполнительностью и предпочтением привычного. \cite{big_five_traits}.
 \end{itemize}
 
-Каждая из вышеперечисленных черт включает 6 дополнительных, более конкретных аспектов, без которых понимание основных факторов было бы неполным \cite{big_five_traits} (см. рисунок~\ref{img:big-five-traits}).
+Каждый из вышеперелчисленных факторов состоит из 6 \textbf{граней} --- дополнительных, более конкретных аспектов, без которых понимание основных факторов было бы неполным \cite{big_five_traits} (см. рисунок~\ref{img:big-five-traits}).
 
 \includeimage
 {big-five-traits} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
@@ -135,35 +162,34 @@ MBTI широко используется в сфере личностного 
 	
 \end{itemize}
 
-
 \begin{table}[h]
 	\begin{center}
 		\small
 		\begin{threeparttable}
 			\caption{Сравнение подходов к описанию персональных черт}
 			\label{tbl:exist_sol_transposed}
-			\begin{tabular}{|p{5cm}|c|c|c|c|c|}
+			\begin{tabular}{|p{5cm}|c|c|c|c|}  % стало на один c меньше
 				\hline
-				Подход & \textbf{К1} & Надежность? & \textbf{К2} & \textbf{К3} \\ 
+				Подход & \textbf{К1} & \textbf{К2} & \textbf{К3} & Надежность? \\ 
 				\hline
-				Оллпорт & - & Высокая & Высокая & - \\ 
+				Оллпорт & - & Не установлена & - & Высокая \\ 
 				\hline
-				Айзенк & - & Высокая & Высокая & + \\ 
+				Айзенк & + & Высокая & + & Высокая \\ 
 				\hline
-				Кэттел & - & Средняя & Высокая & + \\ 
+				Кэттел & - & Высокая & + & Средняя \\ 
 				\hline
-				Большая пятёрка & + & Высокая & Высокая & + \\ 
+				Большая пятёрка & + & Высокая & + & Высокая \\ 
 				\hline
-				MBTI & - & Низкая & Ограничена 16 типами & + \\ 
+				MBTI & - & Ограничена 16 типами & + & Низкая \\ 
 				\hline
 			\end{tabular}
 		\end{threeparttable}			
 	\end{center}
 \end{table}
 
+Ввиду наличия у некоторых описанных выше подходов определенных конечных наборов факторов, которые можно рассматривать с различной степенью выраженности, можно сказать, что все рассмотренные ПОПЧ, за исключением MBTI и теории Олпорта, позволяют описывать произвольное число личностей (персонажей) на основе варьирования значений конкретных параметров.
 
-
-Все подходы к описанию личностных черт, за исключением MBTI, позволяют описать произвольное число личностей (персонажей) на основе варьирования значений конкретных параметров. Так, конкретная черта (параметр модели) может быть задана как бинарная, тернарная (значения: низкое, среднее, высокое), на основе иной шкалы (например, с 7 делениями~\cite{}), на основе соотношения вклада черт в характер (пример: 10~\% той-то черты, ...соотношение, можно со ссылкой). %это отчет о какой-то строке таблицы
+Так, конкретная черта (параметр модели) может быть задана как бинарная, тернарная (значения: низкое, среднее, высокое), на основе иной шкалы (например, с 10 или 24 делениями~\cite{cattell_questionnaire, eysenck_questionnaire}), на основе соотношения вклада черт в характер (пример: 10~\% той-то черты~\cite{big_five_questionairre}). %это отчет о какой-то строке таблицы
 
 
 
