--- a/nir/research/biblio.bib
+++ b/nir/research/biblio.bib
@@ -120,7 +120,7 @@
 	institution = {Белорусский государственный университет, Минск, Беларусь}
 }
 
-@misc{big_five_questionarre,
+@misc{big_five_questionairre,
 	title="Опросник Большой пятерки, IPIP-NEO-300 [Электронный ресурс].",
 	howpublished="Режим доступа: \url{https://psytests.org/big5/ineoA.html} (дата обращения: 09.10.2025)."
 }
@@ -182,6 +182,12 @@
 	howpublished="Режим доступа: \url{https://psytests.org/multi/cat16pfA-run.html} (дата обращения: 03.11.2025)."
 }
 
+@misc{eysenck_questionnaire,
+	title="Личностный опросник Айзенка, EPI [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://psytests.org/eysenck/epiAS-run.htmll} (дата обращения: 03.11.2025)."
+}
+
+
 @book{ronzhin2006speech,
 	author       = {Ронжин, А. Л. and Карпов, А. А. and Ли, И. В.},
 	title        = {Речевой и многомодальный интерфейсы},
@@ -206,4 +212,15 @@
 	address   = {Москва},
 	publisher = {Изд-во МГТУ им. Н. Э. Баумана},
 	isbn      = {978-5-7038-6167-7}
+}
+
+@book{hjellegger-zigler,
+	author    = {Хьелл, Ларри A. and Зиглер, Дэниел J.},
+	title     = {Теории личности = Personality Theories: Основные положения, исследования и применение},
+	edition   = {3},
+	year      = {2014},
+	publisher = {Питер},
+	address   = {Санкт‑Петербург},
+	pages     = {608},
+	isbn      = {978‑5‑496‑01171‑6}
 }
