--- a/nir/research/research.tex
+++ b/nir/research/research.tex
@@ -10,8 +10,8 @@
 
 \maketableofcontents
 
-%\include{01-definitions}
-%\include{02-abbreviations}
+\include{01-definitions}
+\include{02-abbreviations}
 
 \include{03-introduction}
 \include{04-analysis}
